<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deutsch Challenge</string>
    <string name="titulo">Deutsch Challenge</string>
    <string name="start_es">Comenzar</string>
    <string name="start_en">Start</string>
    <string name="ranking_es">Mostrar Ranking</string>
    <string name="ranking_en">Show Ranking</string>
    <string name="exit_en">Exit</string>
    <string name="exit_es">Salir</string>
    <string name="presentation">Mobisoft corporation presents:</string>
    <string name="number_question_en">NQuestion</string>
    <string name="number_question_es">Nº Pregunta</string>
    <string name="score_en">Score: </string>
    <string name="score_es">Puntuacion</string>
    <string name="question_es">Pregunta</string>
    <string name="question_en">Question</string>
    <string name="level_es">Nivel</string>
    <string name="level_en">Level</string>
    <string name="ans1">Answer1</string>
    <string name="ans2">Answer2</string>
    <string name="ans3">Answer3</string>
    <string name="answer_es">Responder</string>
    <string name="answer_en">Answer</string>
    <string name="name_es">Introduce aquí tu nombre</string>
    <string name="name_en">Put your name</string>
    <string name="menu_es">Volver al menu</string>
    <string name="menu_en">Back</string>
    <string name="reset">Reset BD</string>
    <string name="imagen">Logo</string>
    <string name="descriptionImage">The character who shows the question and answers</string>
    <string name="answer1">Answer1</string>
    <string name="word1">word1</string>
    <string name="word2">word2</string>
    <string name="word3">word3</string>
    <string name="word4">word4</string>
    <string name="word5">word5</string>
    <string name="word6">word6</string>
    <string name="correoElectronico">Correo electrónico</string>
    <string name="username_es">Nombre de usuario</string>
    <string name="username_en">User name</string>
    <string name="userAvailable">Usuarios disponibles</string>
    <string name="fullname_es">Nombre completo</string>
    <string name="fullname_en">User name</string>
    <string name="e_mail_en">E-mail address</string>
    <string name="e_mail_es">Direccion de correo electrónico</string>
    <string name="password_en">Password</string>
    <string name="password_es">Contraseña</string>
    <string name="retypepassword_en">Re-Type password</string>
    <string name="retypepassword_es">Reescribir contraseña</string>
    <string name="register_en">Register</string>
    <string name="register_es">Registrar</string>
    <string name="termsconditions_en">Terms and Conditions</string>
    <string name="termsconditions_es">Terminos y Condiciones</string>
    <string name="privacypolicy_en">Privacy policy</string>
    <string name="privacypolicy_es">Política de privacidad</string>
    <string name="blank"></string>
    <string name="nextq_en">Next</string>
    <string name="menu">Menu</string>
    <string name="userinf_en">Select an existing profile or create a new one.</string>
    <string name="newprofile_en">Create new profile</string>
    <string name="clearrank_en">Clear</string>
    <string name="mute_en">Mute</string>
    <string name="registration_screen">Registration</string>
    <string name="n_max_question">00</string>
    <string name="three_digits">000</string>
    <string name="select_game">Game Selection</string>
    <string name="play">Play</string>
    <string name="derdiedas">Der - Die - Das</string>
    <string name="verben">Verben</string>
    <string name="gramatik">Gramatik</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_select_game">SelectGameActivity</string>

</resources>