<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forest" >

    <TableLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gametopbar" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/txName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical|center_horizontal"
                android:text="@string/username_en"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textpanel_size" />

            <TextView
                android:id="@+id/txNQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/number_question_en"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textpanel_size" />

        </TableRow>

        <TableRow
            android:id="@+id/userNameRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/txScore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical|center_horizontal"
                android:text="@string/score_en"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textpanel_size" />

            <TextView
                android:id="@+id/txTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:lines="1"
                android:maxLength="2"
                android:maxLines="1"
                android:text="@string/n_max_question"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="@dimen/textpanel_size" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/relativeQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/topPanel" >

        <TextView
            android:id="@+id/txResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btSound"
            android:layout_below="@+id/radio2"
            android:layout_toLeftOf="@+id/btMenu"
            android:layout_toRightOf="@+id/btSound"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/bigtext_size" />

        <Button
            android:id="@+id/btSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/mute_en" />

        <Button
            android:id="@+id/btMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="menu"
            android:text="@string/menu" />

        <TextView
            android:id="@+id/txQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radio0"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btMenu"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/question_en"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="@dimen/question_size" />

        <Button
            android:id="@+id/radio0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txQuestion"
            android:layout_marginTop="@dimen/question_separation"
            android:layout_toLeftOf="@+id/btMenu"
            android:layout_toRightOf="@+id/btSound"
            android:background="@drawable/button_custom"
            android:onClick="resp0"
            android:padding="10dp"
            android:tag="1"
            android:text="@string/ans1"
            android:textColor="@color/white"
            android:textSize="@dimen/answer_size" />

        <Button
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio0"
            android:layout_marginTop="@dimen/answer_separation"
            android:layout_toLeftOf="@+id/btMenu"
            android:layout_toRightOf="@+id/btSound"
            android:background="@drawable/button_custom"
            android:onClick="resp1"
            android:padding="10dp"
            android:tag="2"
            android:text="@string/ans2"
            android:textColor="@color/white"
            android:textSize="@dimen/answer_size" />

        <Button
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio1"
            android:layout_marginTop="@dimen/answer_separation"
            android:layout_toLeftOf="@+id/btMenu"
            android:layout_toRightOf="@+id/btSound"
            android:background="@drawable/button_custom"
            android:onClick="resp2"
            android:padding="10dp"
            android:tag="3"
            android:text="@string/ans3"
            android:textColor="@color/white"
            android:textSize="@dimen/answer_size" />
    </RelativeLayout>

</RelativeLayout>
