<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forest">

    <RelativeLayout
        android:id="@+id/relativeTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
        
    	<TabHost
        	android:id="@android:id/tabhost"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true" >
        	
        	<LinearLayout
            	android:id="@+id/linearTab"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical" >
            	<TabWidget
                	android:id="@android:id/tabs"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:background="@color/shadow"
                	android:scrollbars="none"
                	android:tabStripEnabled="false" >
            	</TabWidget>
            	<FrameLayout
                	android:id="@android:id/tabcontent"
                	android:layout_width="match_parent"
                	android:layout_height="match_parent" >
                	<LinearLayout
                    	android:id="@+id/ddd_tab"
                    	android:layout_width="match_parent"
                    	android:layout_height="match_parent"
                    	android:orientation="vertical" >
                	</LinearLayout>
                	<LinearLayout
                    	android:id="@+id/verb_tab"
                    	android:layout_width="match_parent"
                    	android:layout_height="match_parent"
                    	android:orientation="vertical" >
                	</LinearLayout>
                	<LinearLayout
                    	android:id="@+id/gram_tab"
                    	android:layout_width="match_parent"
                    	android:layout_height="match_parent"
                    	android:orientation="vertical" >
                	</LinearLayout>
            	</FrameLayout>
        	</LinearLayout>
    	</TabHost>
    </RelativeLayout>
    <TextView
        android:id="@+id/txRankUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeTab"
        android:layout_alignParentLeft="true"
        android:text="@string/fullname_en"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txRankScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeTab"
        android:layout_alignParentRight="true"
        android:text="@string/score_en"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />
    
    <RelativeLayout
        android:id="@+id/relativeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btBack"
        android:layout_below="@+id/txRankUser" >
        <ListView
            android:id="@+id/contentlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:cacheColorHint="#00000000" >
        </ListView>        
    </RelativeLayout>

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="menu"
        android:text="@string/menu" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="clear"
        android:text="@string/clearrank_en" />
    
</RelativeLayout>